# topiary

./: .editorconfig  .gitattributes  .gitignore  .ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  PLACEHOLDER  README.md  default.nix  dist-workspace.toml  flake.nix  generate-coverage.sh  languages  languages.ncl  languages.toml  languages_nix.ncl  local-web-server.ts  nickel-repro.ncl  playground.sh  prefetchLanguages.nix  queries  shell.nix  test.typ  typos.toml  update-wasm-app.sh  update-wasm-grammars.sh  update-web-playground.sh  verify-documented-usage.sh
.cargo/: audit.toml  config.toml
.github/: pull_request_template.md  renovate.json  renovate.json5  (+1 more)
docs/manpages/mdbook-manmunge/: Cargo.toml  README.md
docs/manpages/mdbook-manmunge/src/: error.rs  main.rs  postprocess.rs  preprocess.rs  verbatim.rs
examples/client-app/: Cargo.toml
examples/client-app/src/: main.rs
mdbook-manmunge/: Cargo.toml
mdbook-manmunge/src/: main.rs  preprocess.rs
topiary/: Cargo.toml  build.rs  languages.toml
topiary-cli/: Cargo.toml
topiary-cli/src/: cli.rs  configuration.rs  error.rs  fs.rs  io.rs  language.rs  main.rs  output.rs  supported.rs  visualisation.rs
topiary-cli/src/configuration/: collate.rs  format.rs  fs.rs  mod.rs  serde.rs  source.rs
topiary-cli/tests/: cli-tester.rs  sample-tester.rs
topiary-cli/tests/samples/expected/: bash.bash  bash.sh  cfml.cfm  css.css  generic_shell_direct.sh  generic_shell_env.sh  json5.json5  nickel.ncl  ocaml-interface.mli  ocaml.ml  ocaml_interface.mli  openscad.scad  rust.rs  sdml.sdml  toml.toml  tree_sitter_query.scm  wit.wit  zsh.zsh
topiary-cli/tests/samples/input/: bash.sh  cfml.cfm  css.css  generic_shell_direct.sh  generic_shell_env.sh  json.json  json5.json5  markdown.md  nickel.ncl  ocaml-interface.mli  ocaml.ml  ocamllex.mll  openscad.scad  pact.pact  rust.rs  sdml.sdml  toml.toml  tree_sitter_query.scm  wit.wit  zsh.zsh
topiary-config/: Cargo.toml  languages.ncl  languages.toml  languages_nix.ncl
topiary-config/src/: collate.rs  error.rs  language.rs  language_matcher.rs  lib.rs  serde.rs  source.rs
topiary-config/src/configuration/: serde.rs
topiary-config/tests/: issue-1124.ncl  issue-1131.ncl  shebang_detection.rs
topiary-core/: Cargo.toml  languages.toml
topiary-core/benches/: benchmark.rs
topiary-core/src/: atom_collection.rs  comments.rs  common.rs  error.rs  graphviz.rs  injection.rs  language.rs  lib.rs  pretty.rs  test_utils.rs  tree_sitter.rs  types.rs
topiary-core/src/error/: error_span.rs
topiary-core/tests/: comment_tests.rs  sample-tester.rs  test_bash_continuation.rs
topiary-core/tests/samples/expected/: ocaml-interface.mli  ocaml.ml
topiary-core/tests/samples/input/: nickel.ncl
topiary-playground/: Cargo.toml  build.rs  languages_export.ts
topiary-playground/src/: lib.rs
topiary-queries/: Cargo.toml
topiary-queries/queries/: bash.scm  cfml.scm  css.comment.scm  css.scm  generic_shell.scm  json.scm  json5.scm  markdown.scm  nickel.scm  nix.scm  nu.scm  ocaml.scm  ocaml_interface.comment.scm  ocaml_interface.scm  ocamllex.scm  openscad.scm  pact.scm  rust.comment.scm  rust.scm  sdml.scm  toml.scm  tree_sitter_query.scm  wit.scm  zsh.scm
topiary-queries/queries/bash/: formatting.scm
topiary-queries/queries/ocamllex/: injections.scm
topiary-queries/queries/toml/: formatting.scm
topiary-queries/src/: lib.rs
topiary-queries/tests/: test_continuation.rs
topiary-tree-sitter-facade/: Cargo.toml
topiary-tree-sitter-facade/src/: error.rs  input_edit.rs  language.rs  lib.rs  node.rs  parser.rs  point.rs  query.rs  query_capture.rs  query_cursor.rs  query_match.rs  query_predicate.rs  query_property.rs  range.rs  tree.rs  tree_cursor.rs
topiary-tree-sitter-generic-shell/: Cargo.toml  grammar.js
topiary-tree-sitter-generic-shell/queries/: zsh.scm
topiary-tree-sitter-generic-shell/src/: grammar.json  lib.rs  node-types.json  parser.c
topiary-tree-sitter-shell-shebang/: Cargo.toml  build.rs  grammar.js  package.json
topiary-tree-sitter-shell-shebang/queries/: bash.scm  injections.scm
topiary-tree-sitter-shell-shebang/src/: grammar.json  lib.rs  node-types.json  parser.c
topiary-web-tree-sitter-sys/: Cargo.toml
topiary-web-tree-sitter-sys/src/: lib.rs
topiary/benches/: benchmark.rs
topiary/languages/: bash.scm  nickel.scm  ocaml.scm  ocamllex.scm  toml.scm  tree-sitter-query.scm
topiary/src/: atom_collection.rs  configuration.rs  error.rs  graphviz.rs  language.rs  lib.rs  pretty.rs  test_utils.rs  tree_sitter.rs
topiary/tests/: sample-tester.rs
topiary/tests/samples/expected/: bash.sh  nickel.ncl  ocaml-interface.mli  ocaml.ml  ocaml.mli  ocamllex.mll  rust.rs  toml.toml  tree-sitter-query.scm
topiary/tests/samples/input/: bash.sh  nickel.ncl  nickel2.ncl  ocaml.ml  ocamllex.mll  rust.rs  toml.toml  tree-sitter-query.scm
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
web-playground/: .gitignore  .puppeteerrc.cjs  Cargo.toml  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-playground/e2e/: jest-puppeteer.config.cjs  jest.config.js  sample-tester.test.js  sample-tester.test.ts
web-playground/public/scripts/: tree-sitter-bash.wasm  tree-sitter-cfml.wasm  tree-sitter-css.wasm  tree-sitter-generic_shell.wasm  tree-sitter-javascript.wasm  tree-sitter-json.wasm  tree-sitter-nickel.wasm  tree-sitter-ocaml_interface.wasm  tree-sitter-ocamllex.wasm  tree-sitter-pact.wasm  tree-sitter-query.wasm  tree-sitter-rust.wasm  tree-sitter-toml.wasm  tree-sitter.wasm
web-playground/react-app/: package-lock.json  package.json
web-playground/react-app/public/: index.html  manifest.json
web-playground/react-app/public/scripts/: tree-sitter.js
web-playground/react-app/src/: App.css  App.js  App.tsx  index.js
web-playground/src/: .gitignore  App.css  App.tsx  lib.rs
web-playground/src/components/: editor.tsx
web-playground/src/hooks/: useDebounce.ts
web-playground/src/samples/: input.ts  query.ts
web-playground/wasm-app/: Cargo.toml
web-playground/wasm-app/src/: lib.rs
(+179 files in other folders)
