[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Tweag"]
homepage = "https://topiary.tweag.io"
repository = "https://github.com/tweag/topiary"
documentation = "https://github.com/tweag/topiary#topiary"
readme = "README.md"
license = "MIT"

[workspace]
members = [
  "topiary-core",
  "topiary-cli",
  "topiary-queries",
  "topiary-playground",
  "topiary-config",
  "topiary-web-tree-sitter-sys",
  "topiary-tree-sitter-facade",
  "examples/*"
]
default-members = ["topiary-core", "topiary-cli"]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.dependencies]
assert_cmd = "2.0"
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
cc = "1.1.0"
clap = { version = "4.5", features = ["env", "derive"] }
clap_derive = "4.5"
clap_complete = "4.5"
criterion = "0.5"
directories = "5.0"
env_logger = "0.10"
futures = "0.3.28"
git2 = "0.19.0"
itertools = "0.11"
js-sys = "0.3"
libloading = "0.8.4"
log = "0.4"
nickel-lang-core = { version = "0.8.0", default-features = false }
predicates = "3.0"
pretty_assertions = "1.3"
prettydiff = { version = "0.6.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
test-log = "0.2"
tokio = "1.32"
tokio-test = "0.4"
toml = "0.8"
tree-sitter = "0.22.6"
# tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash", rev = "1b0321ee85701d5036c334a6f04761cdc672e64c" }
# tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css.git", rev = "02b4ee757654b7d54fe35352fd8e53a8a4385d42" }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", rev = "94f5c527b2965465956c2000ed6134dd24daf2a7" }
# tree-sitter-nickel = { git = "https://github.com/nickel-lang/tree-sitter-nickel", rev = "43433d8477b24cd13acaac20a66deda49b7e2547" }
tree-sitter-ocaml = { git = "https://github.com/tree-sitter/tree-sitter-ocaml.git", rev = "036226e5edb410aec004cc7ac0f4b2014dd04a0e" }
# tree-sitter-ocamllex = { git = "https://github.com/314eter/tree-sitter-ocamllex.git", rev = "4b9898ccbf198602bb0dec9cd67cc1d2c0a4fad2" }
# tree-sitter-query = { git = "https://github.com/nvim-treesitter/tree-sitter-query", rev = "a0ccc351e5e868ec1f8135e97aa3b53c663cf2df" }
# tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", rev = "e0e8b6de6e4aa354749c794f5f36a906dcccda74" }
# tree-sitter-toml = { git = "https://github.com/tree-sitter/tree-sitter-toml.git", rev = "342d9be207c2dba869b9967124c679b5e6fd0ebe" }
unescape = "0.1"
wasm-bindgen = "=0.2.91"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

topiary-web-tree-sitter-sys = { version = "0.4.0", path = "./topiary-web-tree-sitter-sys" }
topiary-tree-sitter-facade = {version = "0.4.0", path = "./topiary-tree-sitter-facade" }

# tree-sitter-json's dependency on Tree-sitter is looser than ours, so
# we have to pin its version to maintain API compatibility
[patch."https://github.com/tree-sitter/tree-sitter-json"]
tree-sitter = "0.22.6"
