[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Tweag"]
homepage = "https://topiary.tweag.io"
repository = "https://github.com/tweag/topiary"
documentation = "https://topiary.tweag.io/book"
readme = "README.md"
license = "MIT"

[workspace]
members = [
  "topiary-core",
  "topiary-cli",
  "topiary-queries",
  "topiary-playground",
  "topiary-config",
  "topiary-web-tree-sitter-sys",
  "topiary-tree-sitter-facade",
  "examples/*",
]
default-members = ["topiary-core", "topiary-cli"]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5", features = ["env", "derive"] }
clap_derive = "4.5"
clap_complete = "4.5"
criterion = "0.5"
directories = "5.0"
env_logger = "0.11"
futures = "0.3.28"
gix = { version = "0.70.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
itertools = "0.11"
js-sys = "0.3"
libloading = "0.8.4"
log = "0.4"
nickel-lang-core = { version = "0.8.0", default-features = false }
paste = "1.0.15"
predicates = "3.0"
pretty_assertions = "1.3"
prettydiff = { version = "0.8.0", default-features = false }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streaming-iterator = "0.1.9"
tempfile = "3.12"
test-log = "0.2"
tokio = "1.32"
tokio-test = "0.4"
toml = "0.8"
tree-sitter = "0.24"         # NOTE Update tree-sitter-loader to match
tree-sitter-loader = "0.24"  # NOTE Align with tree-sitter
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-nickel = "0.3"
unescape = "0.1"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

topiary-web-tree-sitter-sys = { version = "0.6.0", path = "./topiary-web-tree-sitter-sys" }
topiary-tree-sitter-facade = { version = "0.6.0", path = "./topiary-tree-sitter-facade" }
topiary-core = { version = "0.6.0", path = "./topiary-core" }
topiary-config = { version = "0.6.0", path = "./topiary-config" }
topiary-queries = { version = "0.6.0", path = "./topiary-queries" }

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release.package.lalrpop]
opt-level = 3

[workspace.metadata.typos]
files.extend-exclude = [
  "/topiary-cli/tests/samples",
]
