[workspace.package]
version = "0.7.3"
edition = "2024"
authors = ["Tweag"]
homepage = "https://topiary.tweag.io"
repository = "https://github.com/topiary/topiary"
documentation = "https://topiary.tweag.io/book"
readme = "README.md"
license = "MIT"

[workspace]
members = [
  "topiary-core",
  "topiary-cli",
  "topiary-queries",
  "topiary-config",
  "topiary-web-tree-sitter-sys",
  "topiary-tree-sitter-facade",
  "examples/*",
]
default-members = ["topiary-core", "topiary-cli"]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5", features = ["env", "derive"] }
clap_complete = "4.5"
clap_derive = "4.5"
criterion = "0.8"
directories = "6.0"
env_logger = "0.11"
futures = "0.3.28"
gix = { version = "0.77.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
itertools = "0.11"
js-sys = "0.3"
libloading = "0.9.0"
log = "0.4"
miette = { version = "7.6.0", features = ["fancy"] }
nickel-lang-core = { version = "0.15.1", default-features = false }
pastey = "0.2.0"
predicates = "3.0"
pretty_assertions = "1.3"
prettydiff = { version = "0.8.0", default-features = false }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streaming-iterator = "0.1.9"
tabled = "0.20.0"
tempfile = "3.12"
test-log = "0.2"
thiserror = "2.0.16"
tokio = "1.32"
tokio-test = "0.4"
toml = "0.9"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-nickel = "0.5"
unescape = "0.1"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4"
wasm-bindgen-test = "=0.3"
web-sys = "0.3"

# NOTE Keep these versions aligned
tree-sitter = "0.26"         # NOTE Update tree-sitter-loader to match
tree-sitter-loader = "0.26"  # NOTE Align with tree-sitter

# NOTE Update these appropriately
topiary-web-tree-sitter-sys = { version = "0.7.3", path = "./topiary-web-tree-sitter-sys" }
topiary-tree-sitter-facade = { version = "0.7.3", path = "./topiary-tree-sitter-facade" }
topiary-core = { version = "0.7.3", path = "./topiary-core" }
topiary-config = { version = "0.7.3", path = "./topiary-config" }
topiary-queries = { version = "0.7.3", path = "./topiary-queries" }

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release.package.lalrpop]
opt-level = 3

[workspace.metadata.typos]
files.extend-exclude = [
  "/topiary-cli/tests/samples",
]
