[package]
name = "topiary-playground"
description = "The WebAssembly code that runs at https://topiary.tweag.io/playground"
version = { workspace = true }
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = { workspace = true }
topiary = { path = "../topiary" }
tree-sitter-facade = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
itertools = { workspace = true }
topiary = { path = "../topiary" }
