[package]
name = "topiary-playground"
description = "The WebAssembly code that runs at https://topiary.tweag.io/playground"
version = "0.2.1"                                                                     # Workaround for https://github.com/ipetkov/crane/issues/281#issuecomment-1560575302
edition.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = { workspace = true }
topiary = { path = "../topiary" }
tree-sitter-facade = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
itertools = { workspace = true }
topiary = { path = "../topiary" }
