[package]
name = "topiary-playground"
description = "The WebAssembly code that runs at https://topiary.tweag.io/playground"
categories = ["development-tools", "text-processing", "webassembly"]
keywords = [
    "code-formatter",
    "formatter",
    "text",
    "tree-sitter",
    "wasm",
    "webassembly",
]
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
topiary-core = { path = "../topiary-core" }
topiary-config = { path = "../topiary-config" }
topiary-tree-sitter-facade.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[build-dependencies]
itertools.workspace = true
topiary-core = { path = "../topiary-core" }
