[package]
name = "topiary-queries"
description = "tree-sitter query files compatible with Topiary"
categories = ["development-tools", "text-processing"]
keywords = ["code-formatter", "formatter", "text", "tree-sitter"]
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = [
  "bash",
  "css",
  "json",
  "nickel",
  "ocaml",
  "ocaml_interface",
  "ocamllex",
  "rust",
  "toml",
  "tree_sitter_query",
]
bash = []
css = []
json = []
nickel = []
ocaml = []
ocaml_interface = []
ocamllex = []
rust = []
toml = []
tree_sitter_query = []
