[package]
name = "topiary-queries"
categories = ["development-tools", "text-processing"]
keywords = ["code-formatter", "formatter", "text", "tree-sitter"]
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
description = """
  tree-sitter query files compatible with Topiary
"""

[features]
bash = []
css = []
json = []
nickel = []
ocaml = []
ocaml_interface = []
ocamllex = []
openscad = []
rust = []
toml = []
tree_sitter_query = []
