[package]
name = "topiary-queries"
# The version should always be "X.Y.Z" where the workspace version is `X.Y.Z'`
# with `Z' <= Z`. Whenever there's a need to release an update to the queries
# without changing the core of Topiary, just bump `Z`.
version = "0.7.3"
categories = ["development-tools", "text-processing"]
keywords = ["code-formatter", "formatter", "text", "tree-sitter"]
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
description = """
  tree-sitter query files compatible with Topiary
"""

[features]
bash = []
css = []
json = []
nickel = []
ocaml = []
ocaml_interface = []
ocamllex = []
openscad = []
rust = []
sdml = []
toml = []
tree_sitter_query = []
wit = []
