[package]
name = "topiary-tree-sitter-facade"
authors = ["<herringtondarkholme@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = """
  Topiary's uniform interface for `tree-sitter` (rust) and `web-tree-sitter` (wasm-bindgen)
"""

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter.workspace = true
tree-sitter-language.workspace = true
streaming-iterator.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen = { workspace = true, features = ["strict-macro"] }
web-sys.workspace = true
topiary-web-tree-sitter-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
