[package]
name = "topiary-tree-sitter-shell-shebang"
version = "0.1.0"
edition = "2021"
authors = ["Topiary Contributors"]
license = "MIT"
description = "Tree-sitter grammar for parsing shell shebang lines to detect bash vs zsh"
repository = "https://github.com/tweag/topiary"

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0"
