[package]
name = "topiary-playground"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
topiary = { path = ".." }
tree-sitter-facade = { git = "https://github.com/tweag/tree-sitter-facade" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
