[package]
name = "client-app"
version.workspace = true
edition = "2021"

# Don't publish this as part of a Topiary release
publish = false

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
topiary-core.workspace = true
topiary-config = { workspace = true, features = ["json"] }
topiary-queries = { workspace = true, features = ["json"] }
